--- a/index.html
+++ b/index.html
@@ -11,99 +11,122 @@
 </head>
 
 <body>
-    <menu class="leftBox">
-        <div class="linksWrapper">
-            <a class="logo" rel="home">
-                <div></div>
-                <span>Nickolaus</span>
-            </a>
-            <div class="title">
-                <div class="titleWrapper">
-                    <p class="titleItem">
-                        <div class="slider">
-                            <div>Web Developer</div>
-                            <div>UI/UX Designer</div>
-                            <div>SEO Analyst</div>
-                            <div>Front End Developer</div>
-                            <div>Software Engineer</div>
-                            <div>Back End Developer</div>
-                            <div>Content Manager</div>
-                            <div>Web Developer</div>
-                        </div>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <nav class="leftBox_nav">
-            <a class="aboutMe current-page" href="index.html">About Me</a>
-            <a class="myWork" href="myWork.html">My Work</a>
-            <a class="contact" href="contact.html">Contact</a>
-            <a class="resume" href="resume.html">Resume</a>
-        </nav>
-
-        <ul class="social">
-            <li>
-                <a class="linkedin" href="https://www.linkedin.com/in/nickolaus-janak/">
-                    <svg class="linkedinSVG" viewBox="-150 242 310 310">
-                        <path d="M-77.8,341.7h-62.2c-2.8,0-5,2.2-5,5v199.9c0,2.8,2.2,5,5,5h62.2c2.8,0,5-2.2,5-5V346.7
-                            C-72.8,344-75.1,341.7-77.8,341.7z"/>
-                        <path d="M-108.9,242.3c-22.6,0-41.1,18.4-41.1,41c0,22.6,18.4,41,41.1,41c22.6,0,41-18.4,41-41
-                            C-67.9,260.7-86.3,242.3-108.9,242.3z"/>
-                        <path d="M80.5,336.8c-25,0-43.5,10.7-54.7,23v-13c0-2.8-2.2-5-5-5h-59.6c-2.8,0-5,2.2-5,5v199.9
-                            c0,2.8,2.2,5,5,5h62.1c2.8,0,5-2.2,5-5v-98.9c0-33.3,9.1-46.3,32.3-46.3c25.3,0,27.3,20.8,27.3,48v97.2c0,2.8,2.2,5,5,5H155
-                            c2.8,0,5-2.2,5-5V437C160,387.4,150.5,336.8,80.5,336.8z"/>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a class="github" href="https://github.com/Klous-jan">
-                    <svg class="githubSVG" viewBox="-289 381 32 32">
-                        <path d="M-273,381.4c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2c0.8,0.2,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7
-                        c-4.5,1-5.4-2.2-5.4-2.2c-0.7-1.8-1.8-2.3-1.8-2.3c-1.4-1,0.1-1,0.1-1c1.6,0.1,2.4,1.6,2.4,1.6c1.4,2.4,3.7,1.7,4.7,1.3
-                        c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.8,0.6-3.2,1.6-4.3c-0.2-0.4-0.7-2,0.1-4.2c0,0,1.3-0.4,4.4,1.6
-                        c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3-2.1,4.4-1.6,4.4-1.6c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3
-                        c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4c0,0.4,0.3,0.9,1.1,0.8c6.4-2.1,11-8.1,11-15.2
-                        C-257,388.6-264.2,381.4-273,381.4L-273,381.4z"/>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </menu>
-    <!-- <div w3-include-html="/src/include/leftBox-mobile.html"></div> -->
-    <div id="centerBox">
-        <div>
+    
+	<!-- Mobile -->
+    <div id="mobile">
+        <div id="mobile-construction">
             <header>
-                <h1 class="nameArea">Stay Awhile and Listen</h1>
+                <h1 id="construction-headline">Mobile content is currently under construction!</h1>
             </header>
-            <h3 class="aboutArea">My name is Nickolaus Janak and welcome to my portfolio.</h3>
-            <p class="aboutArea">My love for technology started around the age of 10 when my best friends father who did IT work began teaching me how computers worked both inside and out. From that point forward my spark of curiosity continued to grew.</p>
-            <p class="aboutArea">Throughout the early years of Myspace and Newgrounds I began learning the ins and outs of HTML, CSS, Animation, Photoshop, and even video editing. I loved creating something from nothing, animating still boring stick figures into intense action fight scenes, and as my creativity and skills grew so did my spark of curiosity.</p>
-            <p class="aboutArea">When Covid happened, I utilized my time and attended The Tech Academy, a coding bootcamp that would help round off my skills, teach me better coding practices, and open me up to other languages and frameworks like SQL, React, JSON, Node and many others. The knowledge I gained from The Tech Academy opened many doors of creativity, and thus my spark of curiosity only grew bigger. </p>
-            <p class="aboutArea">As of today I continue to learn because I will never know everything. I continue to create, because there will always be a nothing to create into something. I continue to challenge myself, because there will always be ways to improve. And I will continue to follow my curiosity to see how big it can truly grow. </p>
-            <h2><a class="aboutAreaContact" href="contact.html">Let talk more!</a></h2>
+            <h3 class="aboutArea">Feel free to visit my portfolio on desktop in the meantime.</h3>
         </div>
     </div>
-    <div id="rightBox">
-        <div class="void" id="void">
-            <ul id="card-list" style="--count: 10;">
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
-                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
+	<!-- Desktop -->
+    <div id="desktop">
+        <menu class="leftBox">
+            <div class="linksWrapper">
+                <a class="logo" rel="home">
+                    <div></div>
+                    <span>Nickolaus</span>
+                </a>
+                <div class="title">
+                    <div class="titleWrapper">
+                        <p class="titleItem">
+                            <div class="slider">
+                                <div>Web Developer</div>
+                                <div>UI/UX Designer</div>
+                                <div>SEO Analyst</div>
+                                <div>Front End Developer</div>
+                                <div>Software Engineer</div>
+                                <div>Back End Developer</div>
+                                <div>Content Manager</div>
+                                <div>Web Developer</div>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <nav class="leftBox_nav">
+                <a class="aboutMe current-page" href="index.html">About Me</a>
+                <a class="myWork" href="myWork.html">My Work</a>
+                <a class="contact" href="contact.html">Contact</a>
+                <a class="resume" href="resume.html">Resume</a>
+            </nav>
+
+            <ul class="social">
+                <li>
+                    <a class="linkedin" href="https://www.linkedin.com/in/nickolaus-janak/">
+                        <svg class="linkedinSVG" viewBox="-150 242 310 310">
+                            <path d="M-77.8,341.7h-62.2c-2.8,0-5,2.2-5,5v199.9c0,2.8,2.2,5,5,5h62.2c2.8,0,5-2.2,5-5V346.7
+                                C-72.8,344-75.1,341.7-77.8,341.7z"/>
+                            <path d="M-108.9,242.3c-22.6,0-41.1,18.4-41.1,41c0,22.6,18.4,41,41.1,41c22.6,0,41-18.4,41-41
+                                C-67.9,260.7-86.3,242.3-108.9,242.3z"/>
+                            <path d="M80.5,336.8c-25,0-43.5,10.7-54.7,23v-13c0-2.8-2.2-5-5-5h-59.6c-2.8,0-5,2.2-5,5v199.9
+                                c0,2.8,2.2,5,5,5h62.1c2.8,0,5-2.2,5-5v-98.9c0-33.3,9.1-46.3,32.3-46.3c25.3,0,27.3,20.8,27.3,48v97.2c0,2.8,2.2,5,5,5H155
+                                c2.8,0,5-2.2,5-5V437C160,387.4,150.5,336.8,80.5,336.8z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="github" href="https://github.com/Klous-jan">
+                        <svg class="githubSVG" viewBox="-289 381 32 32">
+                            <path d="M-273,381.4c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2c0.8,0.2,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7
+                            c-4.5,1-5.4-2.2-5.4-2.2c-0.7-1.8-1.8-2.3-1.8-2.3c-1.4-1,0.1-1,0.1-1c1.6,0.1,2.4,1.6,2.4,1.6c1.4,2.4,3.7,1.7,4.7,1.3
+                            c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.8,0.6-3.2,1.6-4.3c-0.2-0.4-0.7-2,0.1-4.2c0,0,1.3-0.4,4.4,1.6
+                            c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3-2.1,4.4-1.6,4.4-1.6c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3
+                            c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4c0,0.4,0.3,0.9,1.1,0.8c6.4-2.1,11-8.1,11-15.2
+                            C-257,388.6-264.2,381.4-273,381.4L-273,381.4z"/>
+                        </svg>
+                    </a>
+                </li>
+                
+                <li>
+                    <a href="src/include/Nickolaus_Janak_Resume_2023.pdf" download>
+                        <svg class="dlSVG" viewBox="0 0 35.00 35.00">
+                            <path d="M29.426 15.535c0 0 0.648-8.743-7.361-9.74-6.866-0.701-8.955 5.679-8.955 5.679s-2.067-1.988-4.873-0.364c-2.51
+                            1.55-2.067 4.388-2.067 4.388s-5.576 1.083-5.576 6.768c0.125 5.677 6.055 5.734 6.055 5.734h11.351l-5-5h3v-6h4v6h3l-5
+                            5h10.467c0 0 5.52 0.006 6.295-5.395 0.369-5.906-5.336-7.070-5.336-7.070z"/>
+                        </svg>
+                    </a>
+                </li>
             </ul>
-            <div class="last-circle"></div>
-            <div class="second-circle"></div>
-            <div class="center-circle"></div>
-            <!-- <div class="mask"></div> -->
+        </menu>
+        <div id="centerBox">
+            <div>
+                <header>
+                    <h1 class="nameArea">Stay Awhile and Listen</h1>
+                </header>
+                <h3 class="aboutArea">My name is Nickolaus Janak and welcome to my portfolio.</h3>
+                <p class="aboutArea">My love for technology started around the age of 10 when my best friends father who did IT work began teaching me how computers worked both inside and out. From that point forward my spark of curiosity continued to grew.</p>
+                <p class="aboutArea">Throughout the early years of Myspace and Newgrounds I began learning the ins and outs of HTML, CSS, Animation, Photoshop, and even video editing. I loved creating something from nothing, animating still boring stick figures into intense action fight scenes, and as my creativity and skills grew so did my spark of curiosity.</p>
+                <p class="aboutArea">When Covid happened, I utilized my time and attended The Tech Academy, a coding bootcamp that would help round off my skills, teach me better coding practices, and open me up to other languages and frameworks like SQL, React, JSON, Node and many others. The knowledge I gained from The Tech Academy opened many doors of creativity, and thus my spark of curiosity only grew bigger. </p>
+                <p class="aboutArea">As of today I continue to learn because I will never know everything. I continue to create, because there will always be a nothing to create into something. I continue to challenge myself, because there will always be ways to improve. And I will continue to follow my curiosity to see how big it can truly grow. </p>
+                <h2><a class="aboutAreaContact" href="contact.html">Let talk more!</a></h2>
+            </div>
+        </div>
+        <div id="rightBox">
+            <div class="void" id="void">
+                <ul id="card-list" style="--count: 10;">
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
+                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
+                </ul>
+                <div class="last-circle"></div>
+                <div class="second-circle"></div>
+                <div class="center-circle"></div>
+                <!-- <div class="mask"></div> -->
+            </div>
         </div>
     </div>
     <div class="bg"></div>
+    <script type="text/JavaScript" src="scripts/mobile-dropdown.js"></script>
 </body>
 
 </html>
