--- a/playground.html
+++ b/playground.html
@@ -12,6 +12,9 @@
 	</head>
 
 	<body>
+		<!-- Mobile -->
+
+		<!-- Desktop -->
 		<div id="leftBox-include" w3-include-html="/src/include/leftBox-include.html"></div>
 		<div class="scene">
 			<div class="leftBar previous-button"></div>
