--- a/resume.html
+++ b/resume.html
@@ -166,7 +166,7 @@
                                 <p>Creating paths to proficiency with innovative tools and real-world language proficiency tests in over 45 languages. In this position I played a key role in refining our website to ensure accuracy across multiple target languages. I regularly tested our applications, identified and resolved bugs, and collaborated with our development team to provide effective and timely solutions to meet deadlines.</p>
                                 <ul class="points">
                                     <li><p>Collaborating with other developers on our team to track the advancement of various projects and refine code for deployment.</p></li>
-                                    <li><p>Direct involvement in initial product testing, debugging, and ensuring quality assurance. Documented potential issues encompassing UI, inclusive language, and security vulnerabilities.</p></li>
+                                    <li><p>Direct involvement in initial product testing, debugging, and ensuring quality standards. Documented potential issues encompassing UI, inclusive language, and security vulnerabilities.</p></li>
                                     <li><p>Actively engaging in feature development, utilizing problem-solving skills and innovative strategies to enhance user experience and software performance, while ensuring adherence to schedules for major releases and urgent fixes.</p></li>
                                 </ul>
                             </li>
