--- a/myWork.html
+++ b/myWork.html
@@ -69,6 +69,15 @@
                             </svg>
                         </a>
                     </li>
+                    <li>
+                        <a href="src/include/Nickolaus_Janak_Resume_2023.pdf" download>
+                            <svg class="dlSVG" viewBox="0 0 35.00 35.00">
+                                <path d="M29.426 15.535c0 0 0.648-8.743-7.361-9.74-6.866-0.701-8.955 5.679-8.955 5.679s-2.067-1.988-4.873-0.364c-2.51
+                                1.55-2.067 4.388-2.067 4.388s-5.576 1.083-5.576 6.768c0.125 5.677 6.055 5.734 6.055 5.734h11.351l-5-5h3v-6h4v6h3l-5
+                                5h10.467c0 0 5.52 0.006 6.295-5.395 0.369-5.906-5.336-7.070-5.336-7.070z"/>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </menu>
 			<div class="grid">
