--- a/myWork.html
+++ b/myWork.html
@@ -86,19 +86,19 @@
                     <a href="https://klous-jan.github.io/Notflicks/src/main.html">
                         <span class="link-spanner">
                             <div>
-                                <p>languages</p>
+                                <p>Made with:</p>
                                 <ul>
-                                    <li>Vanilla JavaScript</li>
-                                    <li>scss</li>
-                                    <li>React</li>
+                                    <li>JavaScript</li>
+                                    <li>API calls</li>
+                                    <li>SASS</li>
                                 </ul>
                             </div>
                             <div>
-                                <p>Made with:</p>
+                                <p>About:</p>
                                 <ul>
-                                    <li>SASS</li>
-                                    <li>JavaScript</li>
-                                    <li>API calls</li>
+                                    <li>A project im still working <br>
+                                        on where I wanted to replicate <br>
+                                        a movie streaming site.</li>
                                 </ul>
                             </div>
                         </span>
