--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
                     <div class="leftHeadInfo">
                         <ul class="headInfo-list">
                             <li><h3 class="headtitleList">klous-jan.github.io</h3></li>
-                            <li><h3 class="headtitleList">Seattle, WA</h3></li>
+                            <li><h3 class="headtitleList">Portland, OR</h3></li>
                             <li><h3 class="headtitleList" href="contact.html">nickolaus.janak@gmail.com</h3></li>
                         </ul>
                     </div>
